[package]
name = "git-issue"
version = "0.0.3"
authors = ["Bahtiar `kalkin-` Gadimov <bahtiar@gadimov.de>"]
edition = "2021"
description = "Distributed issue management system based on Git"
repository = "https://localhost/"
license="propritary"
keywords = ["git", "cli", "tracking", "issues"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-issue-new"
path = "src/bin/git-issue-new.rs"

[lib]
name = "git_issue"
path = "src/lib.rs"

[dependencies]
clap = { version="^3.0.0", default-features=false, features=["std", "cargo", "derive"] }
getset = "0.1.*"
git-wrapper = "0.5.*"
log = "^0.4"
posix-errors = "^1.2.0"
simple_logger = { version="^2.1.0", default-features=false, features=["stderr", "colors"] }
terminal-link = "^0.1.0"
thiserror = "1"

[dev-dependencies]
tempdir = "0.3.*"

[features]
strict-compatibility = []
