[package]
name = 'git-issue'
authors = ['Bahtiar `kalkin-` Gadimov <bahtiar@gadimov.de>']
categories = [ 'command-line-utilities', 'development-tools' ]
description = 'Distributed issue management system based on Git'
edition = '2021'
keywords = ['cli', 'git', 'issues', 'tracking']
license = 'propritary'
repository = 'https://localhost/'
version = '0.0.9'

[[bin]]
name = 'git-issue-new'
path = 'src/bin/git-issue-new.rs'

[[bin]]
name = 'git-issue-milestone'
path = 'src/bin/git-issue-milestone.rs'

[lib]
name = 'git_issue'
path = 'src/lib.rs'

[dependencies]
bkg-cli-log = "0.1.*"
clap-git-options = { version = "0.1.0", features = ["git-wrapper"] }
clap-verbosity-flag = '1'
git-wrapper = '0.5.*'
log = '^0.4'
posix-errors = '^1.2.0'
terminal-link = '^0.1.0'
time = { version = "^0.3.9", features = [ "parsing" ]}
thiserror = '1'

[dependencies.clap]
default-features = false
features = ['cargo', 'derive', 'std']
version = '^3.1.10'

[dependencies.simple_logger]
default-features = false
features = ['colors', 'stderr']
version = '^2.1.0'

[dev-dependencies]
tempfile = '3'

[features]
strict-compatibility = []
